# dataline

./: .env.example  .gitattributes  CLAUDE.md  README.md  docker-compose.yml
admin/: Dockerfile  (+4 more)
ingestor/crawler/: README.md  pyproject.toml
ingestor/crawler/src/crawler/: __init__.py  cli.py
ingestor/crawler/src/crawler/config/: __init__.py  generator.py  presets.py
ingestor/crawler/src/crawler/crawler/: __init__.py  crawler.py  data.py  density.py  extractor.py  task.py
ingestor/crawler/src/crawler/downloaders/: __init__.py  http.py
ingestor/crawler/src/crawler/engine/: __init__.py  context.py  runner.py  task_executor.py
ingestor/crawler/src/crawler/models/: __init__.py  execution.py  source.py
ingestor/crawler/src/crawler/source/: __init__.py  line.py  presets.py  source.py
ingestor/crawler/tests/: __init__.py  conftest.py  stubs.py
ingestor/crawler/tests/api/: __init__.py  test_build_crawler_config.py  test_crawler_run_source.py  test_source_models.py
ingestor/crawler/tests/core/: __init__.py  test_crawler_config_run.py  test_data_extractor.py  test_deduplicator.py  test_density.py  test_extractor.py  test_extractor_config.py  test_line_models.py  test_link_extractor.py  test_pagination.py  test_playwright_downloader.py  test_retry.py  test_source_validation.py  test_task_config_from_line.py  test_task_executor.py  test_task_pipeline.py
ingestor/crawler/tests/file/: __init__.py
ingestor/crawler/tests/stream/: __init__.py
ingestor/crawler/tests/website/: __init__.py  test_build_crawler_config.py  test_crawler_run_source.py  test_source_models.py
ingestor/server/: alembic.ini  pyproject.toml
ingestor/server/alembic/: env.py
ingestor/server/src/server/: __init__.py  main.py
ingestor/server/src/server/api/: __init__.py  logs.py  sources.py  stats.py  tasks.py
ingestor/server/src/server/core/: config.py  database.py
ingestor/server/src/server/models/: __init__.py  log.py  source.py  task.py
(+35 files in other folders)
